--- a/blog1/templates/blog1/post_list.html
+++ b/blog1/templates/blog1/post_list.html
@@ -10,8 +10,14 @@
         <!--Replaced evrything to posts in <div>-->
         <div>
           <!--to display lists we use for loop-->
+          <!--Everything you put between in for-loops
+              will be repeated for each object in the list. -->
           {% for post in posts %}
-            {{post}} <!--display posts-->
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h1><a href="">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
           {% endfor %}
 
         </div>
