Modified templates to display posts from database

--- a/blog1/templates/blog1/post_list.html
+++ b/blog1/templates/blog1/post_list.html
@@ -12,6 +12,8 @@
           <!--to display lists we use for loop-->
           <!--Everything you put between in for-loops
               will be repeated for each object in the list. -->
+              
+          <!--Modified templates to display posts from database-->
           {% for post in posts %}
             <div>
                 <p>published: {{ post.published_date }}</p>
