--- a/blog1/templates/blog1/post_list.html
+++ b/blog1/templates/blog1/post_list.html
@@ -1,6 +1,14 @@
+<!--to tell our Html template that we added some CSS-->
+{% load staticfiles %} <!--loading static files-->
 <html>
     <head>
-        <title>Django Girls blog</title>
+      <title>Django Girls blog</title>
+      <!--install bootstrap-->
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+      <!--to inform template where our css-file is located-->
+      <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
     </head>
     <body>
         <div>
@@ -12,7 +20,7 @@
           <!--to display lists we use for loop-->
           <!--Everything you put between in for-loops
               will be repeated for each object in the list. -->
-              
+
           <!--Modified templates to display posts from database-->
           {% for post in posts %}
             <div>
